<resources>
    <string name="app_name">SimpleNoteApp</string>
    <string name="logoname">DiaryMate.</string>
    <string name="onboard1txt1">Welcome to DiaryMate.</string>
    <string name="onboard1txt2">Your personal diary to capture thoughts, memories, and moments.</string>
    <string name="onboard1txt3">Skip</string>
    <string name="onboard1txt4">Next</string>
    <string name="onboard2txt1">Write anything, anytime.\n</string>
    <string name="onboard2txt2">Write down your thoughts and feelings anytime, anywhere.</string>
    <string name="onboard2txt3">Skip</string>
    <string name="onboard2txt4">Next</string>
    <string name="onboard3txt1">Protect Your Personal Moments.</string>
    <string name="onboard3txt2">We understand the importance of privacy when it comes to your personal diary entries</string>
    <string name="onboard3txt3">Get Started</string>
    <string name="logintxt1">"Hi, Wecome Back! "</string>
    <string name="logintxt2">Hello again, you’ve been missed!</string>
    <string name="logintxt3">Email</string>
    <string name="logintxt4">Password</string>
    <string name="logintxt5">Login</string>
    <string name="login6">"Don’t have an account ? "</string>
    <string name="logintxt7">Sign Up\n</string>
    <string name="hintlogin1">Enter your email</string>
    <string name="hintlogin2">Enter password</string>
    <string name="signuptxt1">Create an account</string>
    <string name="signupemail">Email</string>
    <string name="signuptxt3">Phone</string>
    <string name="signuphint1">Enter your email</string>
    <string name="signuphint2">Enter your phone number</string>
    <string name="signuptxt4">Password</string>
    <string name="signuphint3">Enter password</string>
    <string name="signuptxt5">Signup</string>
    <string name="signuptxt6">Already have an account?</string>
    <string name="signuptxt7">Login</string>
    <string name="addtext1">Write Your Thoughts</string>
</resources>