<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_text_border"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="611dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/signuptxt1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/signupemail"
        android:textColor="@color/btncl1"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="49dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/signuphint1"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="295dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/signuptxt3"
        android:textColor="@color/btncl1"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/signuphint2"
        android:inputType="phone"
        android:paddingStart="5dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/signuptxt4"
        android:textColor="@color/btncl1"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/signuphint3"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/button3"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/signuptxt5"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="66dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/signuptxt6"
        android:textColor="@color/onboardtxt2"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="65dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/signuptxt7"
        android:textColor="@color/btncl1"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>